# TaskGenerator

./: .gitignore  CMakeLists.txt  StringGenerator.py  config.txt  good_config.json  imgui.ini  input.txt  main.cpp  main_out.txt  out.tex  output.txt  readme.md  sample_config.json  string_generator.py  tmp.tex
include/: ConditionChecker.hpp  Consumer.hpp  Generator.hpp  MyTypes.hpp  ParserJSON.hpp  RandGen.hpp  RegexFiller.hpp  TaskProcessor.hpp  UI.hpp
src/: ConditionChecker.cpp  Consumer.cpp  Generator.cpp  MyTypes.cpp  ParserJSON.cpp  RandGen.cpp  RegexFiller.cpp  TaskProcessor.cpp  UI.cpp
